# discord-trash-notifier

./: .gitignore  README.md  discord-trash-notifier-design.md  pyproject.toml
.github/workflows/: notify.yml
src/: config.py  discord_client.py  main.py  trash_rules.py
tests/: test_main.py  test_trash_rules.py
